@@ -1,3 +1,7 @@
+2019-04-26 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Recognize "factor" and "expand" commands at the beginning of the expression
+
 2019-04-24 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	 * Fix loading of adaptive interval display from mode
